Alteração de layout

--- a/_less/blog.less
+++ b/_less/blog.less
@@ -4,6 +4,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,700,700i');
 // Core variables and mixins
 @import "variables.less";
 @import "mixins.less";
