--- a/_less/custom.less
+++ b/_less/custom.less
@@ -35,3 +35,26 @@
   .badge-warning { background-color: @brand-warning; }
   .badge-danger { background-color: @brand-danger; }
 //}
+
+.CodeMirror { height: auto; border: 1px solid #ddd; }
+.CodeMirror-scroll { max-height: 400px; }
+.CodeMirror pre { padding-left: 7px; line-height: 1.25; }
+
+body {
+  background: url(/blog/images/header-bg2.jpg) no-repeat center -80px;
+}
+header {
+  height: 100px;
+}
+.navbar {
+  margin-top: 25px;
+  font-size: 18px;
+  text-shadow: 1px 1px 1px #ddd;
+  text-transform: uppercase;
+}
+.navbar-brand {
+  font-size: 18px;
+}
+.logo img {
+  margin-top: 10px;
+}
